RESOLVED FIXED 256770
XPath: Fix context node of rhs of union operator
https://bugs.webkit.org/show_bug.cgi?id=256770
Summary XPath: Fix context node of rhs of union operator
Ahmad Saleem
Reported 2023-05-14 05:16:45 PDT
Attachments
Alexey Proskuryakov
Comment 1 2023-05-14 12:16:50 PDT
The change looks sensible to me.
Chris Dumez
Comment 2 2023-05-15 15:17:08 PDT
EWS
Comment 3 2023-05-15 19:28:43 PDT
Committed 264097@main (fe83c2f10448): <https://commits.webkit.org/264097@main> Reviewed commits have been landed. Closing PR #13901 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2023-05-15 19:29:20 PDT
Note You need to log in before you can comment on or make changes to this bug.