XPath: Fix context node of rhs of union operator https://bugs.webkit.org/show_bug.cgi?id=256770

Reviewed by Alexey Proskuryakov.

Use the right context node for rhs of union operator. This aligns our behavior
with Firefox and Chrome.

This is a cherry-pick of the following Blink commit:
- https://chromium-review.googlesource.com/c/chromium/src/+/1973333

* LayoutTests/imported/w3c/web-platform-tests/domxpath/node-sets-expected.txt:
* Source/WebCore/xml/XPathPredicate.cpp:
(WebCore::XPath::Union::evaluate const):

Canonical link: https://commits.webkit.org/264097@main